deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sample-app-deployment
    labels:
       app: sample-app
spec:
    replicas: 3
    selector:
        matchLabels:
            app: sample-app
    template:
        metadata:
            labels:
                app: sample-app
        spec:
            containers:
              - name: sample-app-container
                image: tantalor93/sample-app
                imagePullPolicy: IfNotPresent
                ports:
                - containerPort: 8080
