service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
spec:
  type: NodePort
  selector:
      app: sample-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
