ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-app-ingress
spec:
        backend:
          serviceName: sample-app-service
          servicePort: 80
